--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>salom</h1>
+    <h1> salom </h1>
 
-    <script src="js/app.js"></script>
+    <script src="model/demonmode.mjs" type="module"></script>
 </body>
 </html>
